# vrp

./: .gitignore  LICENSE  README.md
booblik/: package.xml  setup.cfg  setup.py
booblik/booblik/: QMC5883L.py  disolved_oxygen_sensor.py  ec_tds_sensor.py  echo1d.py  gpsimu.py  ht_sensor.py  lidar.py  motors.py  ph_temp_sensor.py  ping.py  rs485.py  rtsp_camera.py  wind_sensor.py  ws_m181.py
booblik/launch/: booblik.launch.py
booblik_msg/: CMakeLists.txt  package.xml
booblik_msg/msg/: Echo1d.msg
vrp_comp/: coords  package.xml  setup.cfg  setup.py
vrp_comp/vrp_comp/: do_task.py  first_task.py  lidar_show.py  manual_control.py  second_task.py  third_task.py  util.py
vrp_gz/: CMakeLists.txt  package.xml
vrp_gz/hooks/: resource_paths.sh
vrp_gz/launch/: competition.launch.py
vrp_gz/models/aruco/: model.config  model.sdf
vrp_gz/models/aruco/meshes/: aruco.dae  aruco1.dae
vrp_gz/models/booblik/: model.config  model.sdf
vrp_gz/models/booblik/meshes/: prop.dae
vrp_gz/models/coast_waves/: model.sdf
vrp_gz/scripts/: update_sea_state_params.sh
vrp_gz/src/: PolyhedraBuoyancyDrag.cc  PolyhedraBuoyancyDrag.hh  PolyhedronVolume.cc  PolyhedronVolume.hh  ShapeVolume.cc  ShapeVolume.hh  SimpleHydrodynamics.cc  SimpleHydrodynamics.hh  Surface.cc  Surface.hh  WaveVisual.cc  WaveVisual.hh  Wavefield.cc  Wavefield.hh
vrp_gz/src/vrp_gz/: bridge.py  bridges.py  launch.py  model.py  payload_bridges.py
vrp_gz/worlds/: aruco_task.sdf  sydney_regatta.sdf
vrp_ros/: CMakeLists.txt  package.xml
